# connect4

./: .gitignore  Cargo.toml  README.md  build.sh  cargo.toml  connect4  todo
cli/: Cargo.toml
cli/src/: canvas.rs  main.rs
src/: ai.rs  board.rs  cartesian.rs  game.rs  lib.rs  main.rs  player.rs  token.rs
src/ai/: mod.rs
src/board/: checker.rs  mod.rs  print.rs  tests.rs
src/player/: ai.rs  human.rs  mod.rs
wasm/: Cargo.toml  index.css  index.html
web/: Cargo.toml
web/src/: lib.rs
