[package]
name = "connect4-wasm"
version = "0.1.0"
edition = "2018"
description = "A game of Connect 4 in the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
dodrio = "0.2"
log = "0.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]
